Revert "IBX-5784: CkEditor toolbar overflow fix (#807)"
This reverts commit 6c79e92d082c6f54420e43f7e5bafbf88752dcb6.

--- a/src/bundle/Resources/public/scss/_main-container.scss
+++ b/src/bundle/Resources/public/scss/_main-container.scss
@@ -1,6 +1,4 @@
 .ibexa-main-container {
-    $edit-container-padding: calculateRem(16px);
-
     display: flex;
     flex-wrap: nowrap;
     overflow: hidden;
@@ -17,18 +15,8 @@
 
     &--edit-container {
         height: 100vh;
-        padding: $edit-container-padding;
+        padding: calculateRem(16px);
         background-color: $ibexa-color-dark;
-
-        &::before {
-            content: '';
-            height: $edit-container-padding;
-            position: absolute;
-            top: 0;
-            width: 100%;
-            background-color: $ibexa-color-dark;
-            z-index: 2;
-        }
 
         .ibexa-main-container {
             &__side-column {
